@@ -47,6 +47,8 @@ Append to the given
 .I FILE
 \&.
 .TP
+.B "\-\-lineno"
+Print line number at the beginning of each line printed on stderr.
 .BI "\-\-max\-lines=" "NO"
 Exit program when
 .I NO
